test/config/integration/server_ssl.json
{
  "listeners": [
  {
    "address": "tcp://127.0.0.1:10001",
    "ssl_context": {
      "ca_cert_file": "./test/config/integration/certs/cacert.pem",
      "cert_chain_file": "./test/config/integration/certs/servercert.pem",
      "private_key_file": "./test/config/integration/certs/serverkey.pem",
      "verify_certificate_hash": "75:1D:5F:48:82:7E:30:1D:06:33:EC:B2:88:E3:22:5F:D0:48:D8:F2:D4:F8:7F:A9:89:7F:7E:AF:8F:89:AB:D0",
      "alpn_protocols": "h2,http/1.1",
      "alt_alpn_protocols": "http/1.1"
    },
    "filters": [
    {
      "type": "read",
      "name": "http_connection_manager",
      "config": {
        "codec_type": "auto",
        "access_log": [
        {
          "path": "/dev/null",
          "filter" : {
            "type": "logical_or",
            "filters": [
              {
                "type": "status_code",
                "op": ">=",
                "value": 500
              },
              {
                "type": "duration",
                "op": ">=",
                "value": 1000000
              }
            ]
          }
        },
        {
          "path": "/dev/null"
        }],
        "stat_prefix": "router",
        "route_config":
        {
          "virtual_hosts": [
            {
              "name": "redirect",
              "domains": [ "www.redirect.com" ],
              "require_ssl": "all",
              "routes": [
                {
                  "prefix": "/",
                  "cluster": "cluster_1"
                }
              ]
            },
            {
              "name": "integration",
              "domains": [ "*" ],
              "routes": [
                {
                  "prefix": "/",
                  "cluster": "cluster_1",
                  "runtime": {
                    "key": "some_key",
                    "default": 0
                  }
                },
                {
                  "prefix": "/test/long/url",
                  "cluster": "cluster_1"
                },
                {
                  "prefix": "/test/",
                  "cluster": "cluster_2"
                }
              ]
            }
          ]
        },
        "filters": [
          { "type": "both", "name": "health_check",
            "config": {
              "pass_through_mode": true, "cache_time_ms": 2500, "endpoint": "/healthcheck"
            }
          },
          { "type": "decoder", "name": "router", "config": {} }
        ]
      }
    }]
  }],

  "admin": { "access_log_path": "/dev/null", "port": 10003 },
  "statsd_local_udp_port": 8125,

  "cluster_manager": {
    "clusters": [
    {
      "name": "cluster_1",
      "connect_timeout_ms": 250,
      "ssl_context": {
        "ca_cert_file": "./test/config/integration/certs/upstreamcacert.pem",
        "verify_subject_alt_name": "foo.lyft.com"
      },
      "type": "static",
      "lb_type": "round_robin",
      "hosts": [{"url": "tcp://127.0.0.1:11000"}]
    },
    {
      "name": "cluster_2",
      "connect_timeout_ms": 250,
      "ssl_context": {
        "ca_cert_file": "./test/config/integration/certs/upstreamcacert.pem",
        "verify_subject_alt_name": "foo.lyft.com"
      },
      "type": "strict_dns",
      "lb_type": "round_robin",
      "hosts": [{"url": "tcp://localhost:11001"}]
    }]
  }
}
